Bug 1839023 - Fix missing arm-specifc header  a=RyanVM

Original Revision: https://phabricator.services.mozilla.com/D181738

Differential Revision: https://phabricator.services.mozilla.com/D182710